CSS: New scrollbar, fixes

--- a/src/javascript/pimp.css
+++ b/src/javascript/pimp.css
@@ -227,3 +227,42 @@
   border-radius: 5px;
 }
 */
+
+/****************************************************************
+                            WEBKIT
+ ****************************************************************/
+
+/*
+::-webkit-scrollbar {
+}
+::-webkit-scrollbar-track {
+}
+::-webkit-scrollbar-track-piece {
+}
+::-webkit-scrollbar-thumb:vertical {
+}
+::-webkit-scrollbar-thumb:horizontal {
+}
+::-webkit-scrollbar-corner {
+}
+::-webkit-scrollbar-resizer {
+}
+::-webkit-scrollbar-button:horizontal:decrement {
+}
+::-webkit-scrollbar-button:horizontal:increment {
+}
+::-webkit-scrollbar-button:vertical:decrement {
+}
+::-webkit-scrollbar-button:vertical:increment {
+}
+::-webkit-scrollbar-button:start:decrement {
+}
+::-webkit-scrollbar-button:end:increment {
+}
+::-webkit-scrollbar-button {
+  cursor : default;
+}
+::-webkit-scrollbar-thumb {
+  cursor : default;
+}
+*/
